
       	All the svyquantile methods now take account of design degrees of freedom and
       	use t distributions for confidence intervals. Specify df=Inf to get a Normal.
       	[For Klaus Ignacio Lehmann Melendez]

       	svyivreg() for 2-stage least-squares (requires the AER package)

       	warn when rho= is used with type="BRR" in svrepdesign [for Tomasz Żółtak]

3.36   Add withPV.survey.design for plausible-value analyses (needs mitools >=2.4)

3.35-3 Warning from svrepdesign() if type="BRR" and scale= is specified, to catch defaulting
       to BRR (Stas Kolenikov)

       More fixes to svymle() with linear predictors for multiple parameters
       (no change to results, but gets rid of warning)

       allow svyby() to have a vector as the first argument

       force character vectors to factor in id= argument of svydesign (fixes Stack Overflow 54239063)

3.35-2 The previous (3.34) patch to allow offsets in svymle() didn't work with non-trivial linear predictors
       for multiple parameters. (reported by Beat Hulliger)

3.35-1 svytable() could give an integer overflow with a replicate-weight design having integer weights,
       such as CHIS.  (Elizabeth Purdom)

       empty factor levels in the strata= argument to svydesign() no longer create strata

       The twophase() function gave errors when the first phase of sampling had multiple
       stages (reported by Pedro Luis Baldoni)

3.35   The use of RODBC is DEPRECATED. If possible, I want to move to just supporting the R-DBI
       interface; you can use ODBC connections with the DBI-compatible 'odbc' package

       Some instances of deparse() needed to be paste(deparse(), collapse=""), notably in svyciprop() (Boris Fazio)

       Fix to svycontrast had broken the no-names case (Brian Miner)

       More helpful error message with missing values in replicate weights (Antony Damico)

       svyglm() now uses match.call() rather than sys.call() for storing the call (for Michael Laviolette)
